--- a/index.html
+++ b/index.html
@@ -5,43 +5,175 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Estilos-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.3.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="style/style.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Tornillos TOREC Soluciones en tornilleria</title>
+    <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/2789/6338/t/15/assets/favicon.png?v=1670947910658543766" type="image/x-icon">
   </head>
   <body>
+      <!-- Cabecera -->
    <header class="header-area">
-    <div class="header-top">
+    <div class="header-top py-3">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    Cabecera Top
+                <div class="col-12 d-flex align-items-center justify-content-between">
+                    <span>¡Bienvenido a nuestra tienda!</span>
+                    <ul class="menu-setting">
+                        <li class="linea">
+                            <a href="#">
+                                <i class="mdi mdi-heart"></i> Whishlist
+                            </a>
+                        </li>
+                        <li class="linea">
+                            <a href="#">
+                                Setting <i class="mdi mdi-chevron-down"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                USD <i class="mdi mdi-chevron-down"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <div class="header-middle">
+    <div class="header-middle py-3">
         <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    Cabacera Medio
+            <div class="row d-flex align-items-center">
+                <div class="col-3 d-flex">
+                    <a href="#" class="link-home">
+                        <img src="image/logo-torec.png" alt="Logo Torec" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-6">
+                    <form action="" class="buscador-principal">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Buscar " aria-label="Recipient's username" aria-describedby="basic-addon2">
+                            <span class="input-group-text" id="btn-buscar"><i class="mdi mdi-magnify"></i></span>
+                          </div>
+                    </form>
+                </div>
+                <div class="col-3">
+                    <div class="d-flex align-items-center justify-content-end costumer-services">
+                        <i class="mdi mdi-face-agent"></i>
+                        <div class="d-grid">
+                            <span class="texto-soporte">Servicio al cliente</span>
+                            <span class="texto-soporte-dos">(33)14540283</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="header bottom">
+    <div class="header-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    Cabecera bottom
+                    <nav class="d-flex justify-content-between align-items-center">
+                        <ul class="menu-principal d-flex justify-content-start">
+                            <li><a href="#">Home <i class="mdi mdi-chevron-down"></i></a></li>
+                            <li><a href="#">Shop</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Pages</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Contact US</a></li>
+                        </ul>
+                        <div class="mini-carrito">
+                            <a href="#">
+                                <i class="mdi mdi-cart-outline"></i>
+                                <span class="cart-total">
+                                    <span class="money" data-currency-mx="$0.00">$0.00</span>
+                                </span>
+                            </a>
+                            <span class="cart-quantity">0</span>
+                        </div>
+                    </nav>
                 </div>
             </div>
         </div>
     </div>
    </header>
+   <!-- Fin Cabecera -->
+
+   <!-- Main -->
+   <main>
+       <div class="container">
+           <!-- Slider -->
+           <div class="row mb-5">
+               <div class="col-12">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="image/slider1.webp" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>First slide label</h5>
+                          <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item" data-bs-interval="2000">
+                        <img src="image/slider2.webp" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Second slide label</h5>
+                          <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="image/slider3.webp" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Third slide label</h5>
+                          <button type="button" class="btn btn-primary">Ver mas</button>
+                          <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+               </div>
+           </div>
+           <!-- Fin Slider -->
+           <!-- Banners -->
+           <div class="row my-5 banners">
+               <div class="col-4">
+                   <a href="#">
+                       <img src="image/banner2.webp" alt="" class="img-fluid" style="object-fit: cover;">
+                    </a>
+                </div>
+               <div class="col-4"><a href="#" class="d-block"><img src="image/banner3.webp" alt="" class="img-fluid"></a></div>
+               <div class="col-4"><a href="#" class="d-block"><img src="image/banner4.webp" alt="" class="img-fluid"></a></div>
+           </div>
+           <!-- Fin Banners -->
+
+           <!-- Hot Deals -->
+           <div class="row products">
+               <div class="col-12">
+                   <h2>Hot Deals</h2>
+                   <div class="product-container d-flex ">
+
+                   </div>
+               </div>
+           </div>
+
+       </div>
+   </main>
+   <!-- Fin Main -->
 
     
 
