Caja de producto

--- a/index.html
+++ b/index.html
@@ -165,8 +165,18 @@
            <div class="row products">
                <div class="col-12">
                    <h2>Hot Deals</h2>
-                   <div class="product-container d-flex ">
-
+                   <div class="products-container d-flex ">
+                        <div class="product d-flex-inline p-3">
+                            <a href="#" class="image-product">
+                                <img src="image/product1.jpg" alt="" class="img-fluid">
+                            </a>
+                            <a href="#" class="texto-categoria">Tornillo Roscado</a>
+                            <a href="#" class="titulo-producto">Tornillo cabeza plana</a>
+                            <div class="precios d-flex">
+                                <span class="precio-descuento">$29.00</span>
+                                <span class="precio">$19.00</span>
+                            </div>
+                        </div>
                    </div>
                </div>
            </div>
