--- a/subcategorias.html
+++ b/subcategorias.html
@@ -22,28 +22,56 @@
 <body>
 
     <h1>Tuercas</h1>
-    <p> Un <b>remache o roblón</b> es un elemento de fijación que se emplea para unir de forma permanente dos o más piezas. Consiste en un tubo cilíndrico que en su fin dispone de una cabeza. Las cabezas tienen un diámetro mayor que el resto del remache, para que así al introducir este en un agujero pueda ser encajado</p>
+    <p>Una <b>tuerca</b> es una pieza mecánica con un orificio central, el cual presenta una rosca, que se utiliza para acoplar a un tornillo, en forma fija o deslizante. La tuerca permite sujetar y fijar uniones de elementos desmontables. En ocasiones puede agregarse una arandela para que la unión cierre mejor y quede fija.</p>
     <!-- Categorias -->
     <div class="categorias">
         <!-- Categoria 1 -->
         <div class="categoria">
-            <a class="link-categoria" href="https://www.torec.mx/collections/repop">
+            <a class="link-categoria" href="https://www.torec.mx/collections/tuercas-hexagonales">
                 <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
-                <h3 class="titulo-categoria">Remache Pop!</h3>
+                <h3 class="titulo-categoria">Tuercas Hexagonales</h3>
             </a>
         </div>
         <!-- Categoria 2 -->
         <div class="categoria">
-            <a class="link-categoria" href="https://www.torec.mx/collections/repopin">
+            <a class="link-categoria" href="hhttps://www.torec.mx/collections/tuercas-alta-resistencia">
                 <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
-                <h3 class="titulo-categoria">Remache Pop Inoxidable</h3>
+                <h3 class="titulo-categoria">Tuercas Alta Resistencia</h3>
             </a>
         </div>
         <!-- Categoria 3 -->
         <div class="categoria">
-            <a class="link-categoria" href="https://www.torec.mx/collections/npg">
+            <a class="link-categoria" href="https://www.torec.mx/collections/tuercas-metricas">
                 <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
-                <h3 class="titulo-categoria">Nudo para Cable</h3>
+                <h3 class="titulo-categoria">Tuercas Métricas</h3>
+            </a>
+        </div>
+        <!-- Categoria 4 -->
+        <div class="categoria">
+            <a class="link-categoria" href="https://www.torec.mx/collections/tca2h">
+                <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
+                <h3 class="titulo-categoria">Tuercas Estructurales</h3>
+            </a>
+        </div>
+        <!-- Categoria 5 -->
+        <div class="categoria">
+            <a class="link-categoria" href="https://www.torec.mx/collections/tuercas-acme">
+                <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
+                <h3 class="titulo-categoria">Tuecas Rosca ACME</h3>
+            </a>
+        </div>
+        <!-- Categoria 6 -->
+        <div class="categoria">
+            <a class="link-categoria" href="https://www.torec.mx/collections/tuercas-de-seguridad">
+                <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
+                <h3 class="titulo-categoria">Tuercas de Seguridad</h3>
+            </a>
+        </div>
+        <!-- Categoria 7 -->
+        <div class="categoria">
+            <a class="link-categoria" href="https://www.torec.mx/collections/tuercas-especiales">
+                <img class="img-categoria" src="https://cdn.shopify.com/s/files/1/2789/6338/files/torec-demo_600x600.png" alt="">
+                <h3 class="titulo-categoria">Tuercas Especiales</h3>
             </a>
         </div>
         
